# bmnroot

./: .gitignore  .gitlab-ci.yml  .gitmodules  BmnRoot_test.cmake  CDash_Env_BmnRoot.sh  CDash_Test.sh  CMakeLists.txt  CTestConfig.cmake  Dart.sh  INSTALL  INSTALL.JINR  README  README.md  SetEnv.sh  SetEnv_hydra.sh  test_axel.txt
KF/: CMakeLists.txt  CbmKF.cxx  CbmKF.h  CbmKFMath.cxx  CbmKFParticle.cxx  CbmKFSecondaryVertexFinder.h  KFLinkDef.h
QA/: BmnAcceptanceFunction.h  BmnCheckEnergyLossMuons.h  BmnClusteringQa.cxx  BmnClusteringQa.h  BmnClusteringQaReport.cxx  BmnClusteringQaReport.h  BmnClusteringQaStudyReport.cxx  BmnCustomQa.cxx  BmnCustomQa.h  BmnFieldApproximationQa.cxx  BmnFieldApproximationQa.h  BmnFieldQa.h  BmnFitQa.cxx  BmnFitQa.h  BmnFitQaStudyReport.cxx  BmnHist.cxx  BmnHist.h  BmnLambdaQa.cxx  BmnLambdaQa.h  BmnLambdaQaReport.cxx  BmnLambdaQaReport.h  BmnMCPoint.h  BmnMCTrack.h  BmnMCTrackCreator.cxx  BmnMCTrackCreator.h  BmnMatchRecoToMC.cxx  BmnMatchRecoToMC.h  BmnPadGenerator.cxx  BmnPadGenerator.h  BmnPidQa.cxx  BmnPidQa.h  BmnPidQaReport.cxx  BmnPidQaReport.h  BmnQALinkDef.h  BmnQaBase.cxx  BmnQaBase.h  BmnRadLengthQa.cxx  BmnRadLengthQa.h  BmnTofQa.cxx  BmnTofQa.h  (+14 more)
alignment/: AlignLinkDef.h  BmnAlignCorrections.cxx  BmnAlignCorrections.h  BmnAlignmentContainer.cxx  BmnAlignmentContainer.h  BmnDchAlignCorrections.h  BmnDchAlignment.cxx  BmnDchAlignment.h  BmnGemAlignCorrections.cxx  BmnGemAlignCorrections.h  BmnGemAlignment.cxx  BmnGemAlignment.h  BmnGemAlignmentCorrections.h  BmnGemReco.cxx  BmnGemReco.h  BmnGemResiduals.cxx  BmnGemResiduals.h  BmnGlobalAlignment.cxx  BmnGlobalAlignment.h  BmnInnTrackerAlign.cxx  BmnInnTrackerAlign.h  BmnMille.h  BmnMilleContainer.cxx  BmnMilleContainer.h  BmnMwpcAlignCorrections.h  BmnResiduals.cxx  BmnResiduals.h  BmnSiResiduals.cxx  BmnSiResiduals.h  BmnSiliconAlignCorrections.cxx  BmnSiliconAlignCorrections.h  CMakeLists.txt  LinkDef.h
barrel/: BmnBarrel.cxx  BmnBarrel.h  BmnBarrelContFact.cxx  BmnBarrelContFact.h  BmnBarrelGeo.cxx  BmnBarrelGeo.h  BmnBarrelGeoPar.cxx  BmnBarrelGeoPar.h  BmnBarrelLinkDef.h  BmnBarrelPoint.cxx  BmnBarrelPoint.h  CMakeLists.txt
bd/: BmnBd.cxx  BmnBd.h  BmnBdContFact.cxx  BmnBdContFact.h  BmnBdGeo.cxx  BmnBdGeo.h  BmnBdGeoPar.cxx  BmnBdGeoPar.h  BmnBdHit.cxx  BmnBdHitProducer.cxx  BmnBdHitProducer.h  BmnBdLinkDef.h  BmnBdPoint.cxx  BmnBdPoint.h  CMakeLists.txt
bmnbase/: BmnBaseLinkDef.h  BmnFileSource.cxx  BmnFileSource.h  BmnGeoNavigator.cxx  BmnMatchRecoToMC.cxx  BmnMatchRecoToMC.h  BmnMath.cxx  BmnMath.h  BmnTrack.cxx  CMakeLists.txt  FitWLSQ.cxx  FitWLSQ.h
bmndata/: BmnADC128Digit.cxx  BmnADC128Digit.h  BmnADC32Digit.cxx  BmnADC32Digit.h  BmnADCDigit.cxx  BmnADCDigit.h  BmnADCSRCDigit.cxx  BmnADCSRCDigit.h  BmnAdcProcessor.cxx  BmnAdcProcessor.h  BmnCSCDigit.cxx  BmnCSCDigit.h  BmnCaloDigit.cxx  BmnCaloDigit.h  BmnCounterTask.cxx  BmnCounterTask.h  BmnCscDigit.cxx  BmnCscDigit.h  BmnDCHdetector.cxx  BmnDCHdetector.h  BmnDataLinkDef.h  BmnDataLinkDef.h~  BmnDchDigit.cxx  BmnDchDigit.h  BmnDchHit.cxx  BmnDchHit.h  BmnDchHitOriginal.cxx  BmnDchRaw2Digit.cxx  BmnDchRaw2Digit.h  BmnDecoSource.cxx  BmnDecoSource.h  BmnDetectorList.cxx  BmnDetectorList.h  BmnDigiContainerTemplate.h  BmnDigiRunHeader.cxx  BmnDigiRunHeader.h  BmnECALDigit.cxx  BmnECALDigit.h  BmnECALRaw2Digit.cxx  BmnECALRaw2Digit.h  (+153 more)
bmnfield/: BmnBsField.cxx  BmnBsField.h  BmnConstPar.cxx  BmnFieldConst.cxx  BmnFieldConst.h  BmnFieldContFact.cxx  BmnFieldCreator.cxx  BmnFieldCreator.h  BmnFieldMap.cxx  BmnFieldMap.h  BmnFieldMapCreator.cxx  BmnFieldMapCreator.h  BmnFieldMapData.h  BmnFieldMapDistorted.cxx  BmnFieldMapDistorted.h  BmnFieldMapSym1.cxx  BmnFieldMapSym1.h  BmnFieldMapSym2.cxx  BmnFieldMapSym2.h  BmnFieldMapSym3.cxx  BmnFieldMapSym3.h  BmnFieldPar.cxx  BmnFieldPar.h  BmnMultiField.h  BmnNewFieldMap.cxx  BmnNewFieldMap.h  BmnRegion.cxx  BmnSP41FieldMapCreator.cxx  BmnSP41FieldMapCreator.h  CMakeLists.txt  FieldLinkDef.h
cat/: CMakeLists.txt  CbmL1.cxx  CbmL1.h  CbmL1Performance.cxx  CbmL1ReadEvent.cxx
dch/: BmnDch.cxx  BmnDch.h  BmnDch1.cxx  BmnDch1.h  BmnDch1ContFact.cxx  BmnDch1ContFact.h  BmnDch1Geo.cxx  BmnDch1Geo.h  BmnDch1GeoPar.cxx  BmnDch1GeoPar.h  BmnDch1LinkDef.h  BmnDch1Point.cxx  BmnDch1Point.h  BmnDch2.cxx  BmnDch2.h  BmnDch2ContFact.cxx  BmnDch2ContFact.h  BmnDch2Geo.cxx  BmnDch2Geo.h  BmnDch2GeoPar.cxx  BmnDch2GeoPar.h  BmnDch2LinkDef.h  BmnDch2Point.cxx  BmnDch2Point.h  BmnDchGeoPar.cxx  BmnDchHitProducer.cxx  BmnDchHitProducer.h  BmnDchHitProducerTmp.cxx  BmnDchHitProducerTmp.h  BmnDchHitProducer_exp.cxx  BmnDchHitProducer_exp.h  BmnDchHitProducer_old.cxx  BmnDchPoint.cxx  BmnDchPoint.h  BmnDchTrack.cxx  BmnDchTrack.h  BmnDchTrackFinder.cxx  BmnDchTrackFinder.h  CMakeLists.txt  DCHgeometryconstants_bmn.h  (+18 more)
ecal/: BmnEcal.cxx  BmnEcal.h  BmnEcalDigitizer.cxx  BmnEcalDigitizer.h  BmnEcalGeoPar.cxx  BmnEcalLinkDef.h  CMakeLists.txt
generators/: CMakeLists.txt  GenLinkDef.h  GenLinkDefPluto.h  MpdDCMSMMGenerator.cxx  MpdDCMSMMGenerator.h  MpdGetNumEvents.cxx  MpdGetNumEvents.h  MpdLAQGSMGenerator.cxx  MpdLAQGSMGenerator.h  MpdPHSDGenerator.cxx  MpdUnigenGenerator.cxx  MpdUnigenGenerator.h  MpdUrqmdGenerator.cxx  MpdUrqmdGenerator.h  show_event_count.cxx
macro/: CMakeLists.txt
monitor/: BmnDataReceiver.cxx  BmnDataReceiver.h  BmnHist.cxx  BmnHist.h  BmnHistCsc.cxx  BmnHistCsc.h  BmnHistDch.cxx  BmnHistDch.h  BmnHistECAL.cxx  BmnHistECAL.h  BmnHistGem.cxx  BmnHistGem.h  BmnHistLAND.cxx  BmnHistLAND.h  BmnHistMwpc.cxx  BmnHistMwpc.h  BmnHistScWall.cxx  BmnHistScWall.h  BmnHistSilicon.cxx  BmnHistSilicon.h  BmnHistSrc.cxx  BmnHistSrc.h  BmnHistToF.cxx  BmnHistToF.h  BmnHistToF700.cxx  BmnHistToF700.h  BmnHistTofCal.cxx  BmnHistTofCal.h  BmnHistTrigger.cxx  BmnHistTrigger.h  BmnHistZDC.cxx  BmnHistZDC.h  BmnMQSink.cxx  BmnMQSink.h  BmnMQSource.cxx  BmnMQSource.h  BmnMonHists.cxx  BmnMonHists.h  BmnMonProf.cxx  BmnMonitor.cxx  (+16 more)
mwpc/: BmnMWPC1.cxx  BmnMWPC1.h  BmnMWPC1ContFact.cxx  BmnMWPC1ContFact.h  BmnMWPC1Geo.cxx  BmnMWPC1Geo.h  BmnMWPC1GeoPar.cxx  BmnMWPC1GeoPar.h  BmnMWPC1LinkDef.h  (+59 more)
(+2716 files in other folders)
